[update] update to 0.5.0
